--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -21,3 +21,6 @@ jobs:
         pip install -r requirements.txt
     - name: Run Tests
       run: python -m unittest discover
+    - name: Run tests
+      run: python manage.py test
+      
