--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -19,6 +19,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: Run tests
-      run: python manage.py test
+    - name: Run Tests
+      run: python -m unittest discover
       
