--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -20,5 +20,5 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     - name: Run Tests
-      run: python -m unittest discover
+      run: python -m unitest discover
       
