--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -19,6 +19,5 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: Run Tests
-      run: python -m unittest discover
-      
+    - name: Run Django Tests
+      run: python manage.py test
