--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -19,5 +19,5 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: Run Django Tests
+    - name: Run Tests
       run: python manage.py test
