--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -4,7 +4,6 @@ on: [push, pull_request]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
@@ -19,5 +18,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+    - name: List files in the directory
+      run: ls -la
     - name: Run Tests
       run: python manage.py test
